# ChangeLog for www-apps/moinmoin
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/moinmoin/ChangeLog,v 1.91 2013/03/17 23:52:20 radhermit Exp $

*moinmoin-1.9.7 (17 Mar 2013)

  17 Mar 2013; Tim Harder <radhermit@gentoo.org> +moinmoin-1.9.7.ebuild:
  Version bump, migrate to distutils-r1.

  05 Jan 2013; Tim Harder <radhermit@gentoo.org> -moinmoin-1.9.5.ebuild:
  Remove old, insecure version.

  04 Jan 2013; Agostino Sarubbo <ago@gentoo.org> moinmoin-1.9.6.ebuild:
  Stable for ppc, wrt bug #449314

  02 Jan 2013; Agostino Sarubbo <ago@gentoo.org> moinmoin-1.9.6.ebuild:
  Stable for x86, wrt bug #449314

  02 Jan 2013; Agostino Sarubbo <ago@gentoo.org> moinmoin-1.9.6.ebuild:
  Stable for amd64, wrt bug #449314

*moinmoin-1.9.6 (01 Jan 2013)

  01 Jan 2013; Tim Harder <radhermit@gentoo.org> +moinmoin-1.9.6.ebuild:
  Version bump.

  30 Nov 2012; Tim Harder <radhermit@gentoo.org> -moinmoin-1.8.8.ebuild,
  -moinmoin-1.9.4.ebuild, -files/reconfig-3, -files/postinstall-en.txt:
  Remove old.

  27 Sep 2012; Andreas Schuerch <nativemad@gentoo.org> moinmoin-1.9.5.ebuild:
  x86 stable, see bug 433898

  25 Sep 2012; Anthony G. Basile <blueness@gentoo.org> moinmoin-1.9.5.ebuild:
  stable ppc, bug #433898

  25 Sep 2012; Agostino Sarubbo <ago@gentoo.org> moinmoin-1.9.5.ebuild:
  Stable for amd64, wrt bug #433898

*moinmoin-1.9.5 (24 Sep 2012)

  24 Sep 2012; Tim Harder <radhermit@gentoo.org> +moinmoin-1.9.5.ebuild:
  Version bump.

  22 Sep 2012; Anthony G. Basile <blueness@gentoo.org> moinmoin-1.9.4.ebuild:
  keyword ~arm, bug #433978

  22 Sep 2012; Anthony G. Basile <blueness@gentoo.org> moinmoin-1.9.4.ebuild:
  keyword ~ppc, bug #433978

  18 Sep 2012; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Remove redundant maintainer from metadata.

  13 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> moinmoin-1.9.4.ebuild:
  x86 stable wrt bug #339295
