@@ -6,17 +6,17 @@ AUX reconfig-1.9.4 457 SHA256 d23601f95da8a9abc02a439b5b3f257dda31ff8f20f1e42b44
 DIST moin-1.9.6.tar.gz 36754215 SHA256 816f0454808e8abdc44e9839ed08802bea78c174bdbd72b9644c72fce891f6f6 SHA512 295647b4edaedc582c7e3727eae1d443ec23c8511a70d7ffcb45875614cf69e523687340ad742d7eda9e191e65f1d34aeb629041071212ac0388e25eaaeb59fe WHIRLPOOL 569b048756da7356c6203e39c78ec5c8c8ecd3121e8c6bde4831498e855aed6e69fc9fe3e5a068cf4134678ef98984df35945c988c4a59a636111a2e5ed7e5f8
 DIST moin-1.9.7.tar.gz 36911772 SHA256 f4ba1b5c956bd96d2a61e27e68d297aa63d1afbc80d5740e139dcdf0affb4db5 SHA512 5cb6c205fb0c18b83fe7cee83bf88098bfbbc357c89004f8b7cf484bd7efd35af4ace78d0e80df71b01f70861e8bbb63aeefdd831768989d5b7f511ca24fb60c WHIRLPOOL 8f7919e1672a9a192249221864b1ac8cda47eb75e6f328485ef54ae45d344beeaac8070b281f7612f59795e359ad93bdf060e4930411ee7509ec77aa5396c30a
 EBUILD moinmoin-1.9.6.ebuild 2490 SHA256 7d0adb84600455fa15e50f4ac7e5740e6f10f544863af5ac691a5a81c24c7737 SHA512 2b25f1a3d14cf1088d8028bec38519a6273a6d919da4b585826a3c3fd91f817348588272fa85beca4fec54873da8096b0fbf200bb5373014b1ccaf7cd10cb8b2 WHIRLPOOL 400eee36f8522f6ea0ce0981ae1cec86451274619ad06040a8e5bb01b4b94f7838e44a43f63e0c1e53c31349861ff224fd9882839b1c0f62c40752c7dcfad035
-EBUILD moinmoin-1.9.7.ebuild 2536 SHA256 b5d05c7b04656ffa3814fe06359a241087de736ba110440d8cbce16bdd95b5c0 SHA512 c2cb0509249b1ed5d1966edfa60e526845220b1b12bef14136035e02e2d7a6b1f50e4027338c3f5c09b89a7f723be2543274377505da2d87daead2c4396f0a43 WHIRLPOOL 6b165ea3357edc7a3c2a57808c2bbc0a5e15a9813f8b69731dddab809fb5862d71c3b912565f97fefe550f231f529eebcac402cabfbcbcb50938dbda7a46a8ff
-MISC ChangeLog 13618 SHA256 c344d59281d10e61ce131b3c62f421e9b3e251b3a5a0e0ad52683f8822654e72 SHA512 a3640a4ebda05a616ce0257d3327271748f1a063756ddea5b19b0a4726a9a2413e5f8a51a3f1d1054ebcb34833a9e9c58a62f83c9e881d280e0d3fadec4e0a70 WHIRLPOOL 1c4e1e21a14346974e2cc1e3385929804ec49cabb7bf6c154d7d559231a14a28ae84e684a547cda2bcbd71879fe1e859f58c346f947fe09a0a31759cfe32b5ab
+EBUILD moinmoin-1.9.7.ebuild 2538 SHA256 6f9c5f837a07fc45a3380136fb709669d5ea524746506cfe6484b250d9a812e1 SHA512 32d56894b369ca6386b2ce30481aee9644d27f7618d0f899a5ba5796fdb8f66fdc12d385fbd086f8754e189a540955ade26a2b9a932da31e88f39aa5215dcfdd WHIRLPOOL fecf7fe591760678ca3ce7dc149214020a7091a4cb56e5f17a87ddd210344d8e3c422035ad9fdfd6669153b1246347dd8e3721dbac85245cbd0e53784d7e4000
+MISC ChangeLog 13752 SHA256 04095f1f6476095ea8311a2ebcdce5a2425e8b4df55abf8b7abd92c570122ddd SHA512 9dae6cdd17d43c6981d8e628b04c6997263b6c5d4b3555108dc5a6dd0d8438197c6e751d716051d9fd67406ee7c0c108f948b7cbff77963138eea337610588bb WHIRLPOOL 4d240dd3cfd20cbbde3006b4176acfa6b278770fa98b0629fd50419f14cd12f6be143c6de3797a26b79144e84893eac14a21e1b2188127d6e07ef540d0c6970b
 MISC metadata.xml 161 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4 SHA512 da8733f12ac4bebcfa485138fd9880683c1196efc0312a588ffce412ed14c1dd831e005129b6598d027af44d381fceb844453a433d0c982348e21f2d9c49f52e WHIRLPOOL 2b56ebef4f0870596c32c35c96e6dfbc911f6a3d8fe0e8c463df76dfa73dde112948c814b9a9ee996b7d71a85e4a723033ee3b92f4cde0f31d0770404d7dba61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRRlc1AAoJEEqz6FtPBkyjW3UIAJUCHkFRrpl6Z3zw8CroUirq
-05Gg+enHIaeYRpEQeZPaaghKZaDmTblD6sVnewMp08Auhb78FSxjOdOdr6068klP
-P46MRRc0sFNOD41QFVQvQ+U0IEcs7x/z9wX2219pOQ4+r8Zl5JI7MIHaveaAnsxY
-hqQyqkKcUFoMpkElALAx1dBSFCaA78m+gYNeZnWqriILy9xGhffjzcrTrchq0JD1
-/bZ1nGnPGADYOE7slplisfeH6HAjCMhNXJK3uM9mTRs5Kq4cfVDZOe9GNFt9seDh
-PDPUvmJjys7iE0ijkJKMZFeXLonVsp+zRci09Akz5SzqarEzn8PfJLN8TXShlgY=
-=mlqk
+iQEcBAEBCAAGBQJRb4AHAAoJEEqz6FtPBkyjRJYIALkYMGbd4uql/D7clRwx22BI
+U89LbefgusqyUA3hGuOYW2qFFDUp3bjlXne+sitU3cTRbv30H7BbYuMDpTZLzHpT
+0ruTEdDxGqWH3o46pXzc32iYo9Qd7hFEuHx8eYM3QEIRld0yJqE1JSR5nsIR6g7n
+3f+qSaBiL4qEEI+Cp0ArlzTx1mRWmceXKSSCaSBI5MrT51mPA64tWH1PIt5V1+Qc
+u1a0l0eoeWjQOVYjFQwYpWJrfzOHZnJOxiD1ek4z/vjyqEafDiCi73aWvSh04U8j
+lt0EHXN+L3a79Yi+Tj8ZmK+VXxJoTC+oBz5Dyp7hTrsBo7Ik3QuyGtXydXcq5GQ=
+=EqtC
 -----END PGP SIGNATURE-----
