@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/moinmoin/moinmoin-1.9.7.ebuild,v 1.1 2013/03/17 23:52:20 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/moinmoin/moinmoin-1.9.7.ebuild,v 1.2 2013/04/18 05:09:26 radhermit Exp $
 
 EAPI="5"
 PYTHON_COMPAT=( python{2_5,2_6,2_7} )
@@ -18,11 +18,10 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~arm ~ppc ~x86"
 
-RDEPEND="${PYTHON_DEPS}
-	>=dev-python/docutils-0.4[${PYTHON_USEDEP}]
+RDEPEND=">=dev-python/docutils-0.4[${PYTHON_USEDEP}]
 	>=dev-python/flup-1.0.2[${PYTHON_USEDEP}]
 	>=dev-python/pygments-1.1.1[${PYTHON_USEDEP}]
-	>=dev-python/werkzeug-0.7.0"
+	>=dev-python/werkzeug-0.7.0[${PYTHON_USEDEP}]"
 
 need_httpd_cgi
 
