@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/moinmoin
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/moinmoin/ChangeLog,v 1.91 2013/03/17 23:52:20 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/moinmoin/ChangeLog,v 1.92 2013/04/18 05:09:26 radhermit Exp $
+
+  18 Apr 2013; Tim Harder <radhermit@gentoo.org> moinmoin-1.9.7.ebuild:
+  Update werkzeug dep since a version uses distutils-r1 now.
 
 *moinmoin-1.9.7 (17 Mar 2013)
 
